force-app/main/default/objects/Data_Load_Request__c/Data_Load_Request__c.object-meta.xml
<CustomObject>
    <label>Data Load Request</label>
    <nameField>
        <displayFormat>DLR- {000000}</displayFormat>
        <label>Data Load Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Load Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>