force-app/main/default/objects/Data_Load_Request__c/fields/Data_Load_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Load_Type__c</fullName>
    <label>Data Load Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sample Data Load</fullName>
            </value>
            <value>
                <fullName>Complete Data Load</fullName>
            </value>
            <value>
                <fullName>Delete Data Load</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>