force-app/main/default/objects/Data_Load_Request__c/fields/Request_Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Request_Job_Name__c</fullName>
    <label>Request Job Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>