force-app/main/default/objects/Data_Load_Request__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <label>Start Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>